--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "polymer": "~v1.2.3",
     "px-spinner": "https://github.com/predixdev/px-spinner.git#~0.1.1",
-    "px-theme": "https://github.com/PredixDev/px-theme.git#~v0.4.0"
+    "px-theme": "https://github.com/PredixDev/px-theme.git#~v0.4.0",
+    "px-tooltip" : "https://github.com/PredixDev/px-tooltip.git#~0.2.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~v1.1.0",
