updated gh-pages v0.9.2

--- a/bower.json
+++ b/bower.json
@@ -29,5 +29,10 @@
     "px-list-inline-design": "https://github.com/PredixDev/px-list-inline-design.git#~0.2.0",
     "px-starter-kit-design": "https://github.com/PredixDev/px-starter-kit-design.git#~0.4.0",
     "q": "~v1.2.0"
+  },
+  "resolutions": {
+    "px-theme": "~v0.7.0",
+    "px-spinner": "~0.2.0",
+    "polymer": "^1.2.1"
   }
 }
